Fix overstretched image

--- a/src/pages/about-page/AboutPage.css
+++ b/src/pages/about-page/AboutPage.css
@@ -134,6 +134,7 @@ p {
     display: inline-block;
     border-radius: 0;
     width: 80%;
+    max-width: 1024px;
     height: auto;
     padding-top: 0;
     box-shadow: 0 8px 15px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
